--- a/templates/product_day.html
+++ b/templates/product_day.html
@@ -456,7 +456,7 @@
 				<p class="copyright">
 					&copy; 2023 Made by <a href="#">Team NJ<sup>2</sup>.</a>
 				</p>
-				<img src="{% static 'payment/payment.png' %}" width="380" height="90" loading="lazy" alt="payment method" class="img">
+				{% comment %} <img src="{% static 'payment/payment.png' %}" width="380" height="90" loading="lazy" alt="payment method" class="img"> {% endcomment %}
 			</div>
 		</div>
 	</footer>
