--- a/static/product.css
+++ b/static/product.css
@@ -702,40 +702,51 @@ main .container {
 }
 
 .product-details .quantity {
+	width: 200px;
+	height: 60px;
 	display: flex;
-    width: 60%;
-	margin-bottom: 15px;
     align-items: center;
     justify-content: center;
     border-radius: 12px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+	margin-bottom: 10px;
 }
 
-.product-details .quantity span {
-    padding: 20px;
+.product-details .quantity input {
     width: 100%;
+	border: none;
+	outline: none;
+	background-color: transparent;
     text-align: center;
     font-size: 1.2rem;
-    font-weight: 600;
+    font-weight: 400;
     cursor: pointer;
-    transition: 0.2s ease;
+    transition: 0.1s ease;
 }
-.product-details .quantity span:nth-child(1) {
+.product-details .quantity button:nth-child(1) {
+    height: 100%;
+	width: 100%;
     border-bottom-left-radius: 12px;
     border-top-left-radius: 12px;
 }
-.product-details .quantity span:nth-child(3) {
+.product-details .quantity button:nth-child(3) {
+    height: 100%;
+	width: 100%;
     border-bottom-right-radius: 12px;
     border-top-right-radius: 12px;
 }
 
-.product-details .quantity span:hover {
+.product-details .quantity button:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
 
 
-.product-details .quantity span.num {
+.product-details .quantity .num {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
     font-size: 1.2rem;
     border-right: 2px solid rgba(0, 0, 0, 0.2);
     border-left: 2px solid rgba(0, 0, 0, 0.2);
