--- a/static/product_day.css
+++ b/static/product_day.css
@@ -23,7 +23,7 @@
 	--black: #000000;
 }
 /*** RESETTING CSS ***/
-*, *::before, *::after {
+* {
 	font-family: 'poppins', sans-serif;
 	margin: 0;
 	padding: 0;
@@ -851,10 +851,12 @@ main .container {
 	outline: none;
 	background-color: transparent;
     text-align: center;
+	border-right: 2px solid rgba(0, 0, 0, 0.2);
+    border-left: 2px solid rgba(0, 0, 0, 0.2);
     font-size: 1.2rem;
-    font-weight: 600;
+    font-weight: 400;
     cursor: pointer;
-    transition: 0.2s ease;
+    transition: 0.1s ease;
 }
 .product-details .quantity button:nth-child(1) {
     height: 100%;
@@ -875,7 +877,11 @@ main .container {
 
 
 
-.product-details .quantity button.num {
+.product-details .quantity .num {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
     font-size: 1.2rem;
     border-right: 2px solid rgba(0, 0, 0, 0.2);
     border-left: 2px solid rgba(0, 0, 0, 0.2);
