admin panel changes

--- a/templates/pres_confirm.html
+++ b/templates/pres_confirm.html
@@ -96,7 +96,7 @@
                                 <input type="hidden" name="prescription_img" value="{{ p.0 }}">
                                 <input type="hidden" name="days2" value="{{p.1}}">
                                 <label for="address">Address:</label>
-                                <input style="height: 60px;" type="text" id="addressInput" name="address" value='{{user_address}}'>
+                                <input style="height: 60px;" type="text" id="addressInput" name="address" value='{{user_address}}' required />
                                 <button class="confirm-order" type="submit">Confirm Order</button>
                                 
                             </form>
