--- a/templates/index.html
+++ b/templates/index.html
@@ -652,6 +652,7 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="{% static 'script.js' %}"></script>
 	<script src="{% static 'search.js' %}"></script>
+	<script type="text/javascript" src="{% static 'prescription.js' %}"></script>
 	<script type="text/javascript" src="{% static 'cart.js' %}"></script>
 </body>
 </html>
