--- a/templates/product.html
+++ b/templates/product.html
@@ -250,25 +250,16 @@
 		<div class="backdrop"></div>
 		<div class="img-area" id="img-area">
 			<div class="elem-container active" data-img="">
-					<input type="file" id="file-upload" accept="image/*" hidden>
-					<div class="times">
-						<input type="checkbox" name="Morning" value="Morning">
-						<label for="Morning">Morning</label>
-						<input type="checkbox" name="Afternoon" value="Afternoon">
-						<label for="Afternoon">Afternoon</label>
-						<input type="checkbox" name="Night" value="Night">
-						<label for="Night">Night</label>
-					</div>
-					<div class="days">
-						<input type="checkbox" name="7Days" value="7Days">
-						<label for="7Days">7 Days</label>
-						<input type="checkbox" name="15Days" value="15Days">
-						<label for="15Days">15 Days</label>
-						<input type="checkbox" name="1Month" value="1Month">
-						<label for="1Month">1 Month</label>
-					</div>
-					<button class="prescription-upload-btn" type="submit">Upload</button>
+				<input type="file" id="file-upload" accept="image/*" hidden>
+				<div class="days">
+					<input type="checkbox" name="7Days" value="7">
+					<label for="7Days">7 Days</label>
+					<input type="checkbox" name="15Days" value="15">
+					<label for="15Days">15 Days</label>
+					<input type="checkbox" name="1Month" value="30">
+					<label for="1Month">1 Month</label>
 				</div>
+				<button class="prescription-upload-btn" type="button" onclick="handleUpload()">Upload</button>
 			</div>
 		</div>
 		<div class="container">
@@ -450,6 +441,7 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="{% static 'script.js' %}"></script>
 	<script src="{% static 'search.js' %}"></script>
+	<script type="text/javascript" src="{% static 'prescription.js' %}"></script>
 	<script>
 		// Get the buttons and the quantity element
 		const decreaseBtn = document.querySelector('.decrease-btn');
