--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -113,156 +113,95 @@
 						<div class="dropdown-panel">
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-									<a href="#">Diabetics Care</a>
+
 								</li>
-								<li class="panel-list-item"><a href="#">Diabetics</a></li>
-								<li class="panel-list-item"><a href="#">Dental Care</a></li>
-								<li class="panel-list-item"><a href="#">Sexual Care</a></li>
-								<li class="panel-list-item"><a href="#">Baby Care</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Cold & Allergies'%}">Cold & Allergies</a>
+								</li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Heart Problems'%}">Heart Problems</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Diabetes'%}">Diabetes</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Respiratory Problems'%}">Respiratory
+										Problems</a></li>
 							</ul>
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-									<a href="#">Covid Special</a>
+
 								</li>
-								<li class="panel-list-item"><a href="#">Sanitizers</a></li>
-								<li class="panel-list-item"><a href="#">Surgical Masks</a></li>
-								<li class="panel-list-item"><a href="#">Hand Gloves</a></li>
-								<li class="panel-list-item"><a href="#">Covid Test Kit</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Neurological Problems'%}">Neurological
+										Problems</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Arthritis or other types of pain'%}">Arthritis
+										or other types of pain</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Sexual Wellness'%}">Sexual Wellness</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Herbal & Ayurvedic'%}">Herbal & Ayurvedic</a>
+								</li>
 							</ul>
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-									<a href="#">Men's Care</a>
+
 								</li>
-								<li class="panel-list-item"><a href="#">Men Specific</a></li>
-								<li class="panel-list-item"><a href="#">Men Specific</a></li>
-								<li class="panel-list-item"><a href="#">Men Specific</a></li>
-								<li class="panel-list-item"><a href="#">Men Specific</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Infant & Mothers care'%}">Infant & Mothers
+										care</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Supplements & Nutrition'%}">Supplements &
+										Nutrition</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='More will be added late'%}">More will be
+										added late</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Cold & Allergies'%}">More will be added
+										late</a></li>
 							</ul>
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-									<a href="#">Women's Care</a>
+
 								</li>
-								<li class="panel-list-item"><a href="#">Women Specific</a></li>
-								<li class="panel-list-item"><a href="#">Women Specific</a></li>
-								<li class="panel-list-item"><a href="#">Women Specific</a></li>
-								<li class="panel-list-item"><a href="#">Women Specific</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Cold & Allergies'%}">More will be added
+										late</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Cold & Allergies'%}">More will be added
+										late</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Cold & Allergies'%}">More will be added
+										late</a></li>
+								<li class="panel-list-item"><a
+										href="{%url 'category' p_category='Cold & Allergies'%}">More will be added
+										late</a></li>
 							</ul>
 						</div>
 					</li>
 					<li class="menu-category">
-						<a href="#" class="menu-title">Men's</a>
-			
-						<ul class="dropdown-list">
-			
-						  <li class="dropdown-item">
-							<a href="#">Men Specific</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Men Specific</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Men Specific</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Men Specific</a>
-						  </li>
-			
-						</ul>
+						<a href="{%url 'category' p_category='MENS'%}" class="menu-title">Men's</a>
+
+
 					</li>
 					<li class="menu-category">
-						<a href="#" class="menu-title">Women's</a>
-			
-						<ul class="dropdown-list">
-			
-						  <li class="dropdown-item">
-							<a href="#">Women Specific</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Women Specific</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Women Specific</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Women Specific</a>
-						  </li>
-			
-						</ul>
+						<a href="{%url 'category' p_category='WOMEN'%}" class="menu-title">Women's</a>
+
 					</li>
 					<li class="menu-category">
-						<a href="#" class="menu-title">Baby Care</a>
-			
-						<ul class="dropdown-list">
-			
-						  <li class="dropdown-item">
-							<a href="#">Baby Specific</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Baby Specific</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Baby Specific</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Baby Specific</a>
-						  </li>
-			
-						</ul>
+						<a href="{%url 'category' p_category='BABY CARE'%}" class="menu-title">Baby Care</a>
+
+
 					</li>
 					<li class="menu-category">
-						<a href="#" class="menu-title">Personal Hygiene</a>
-			
-						<ul class="dropdown-list">
-			
-						  <li class="dropdown-item">
-							<a href="#">Personal Hygiene</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Personal Hygiene</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Personal Hygiene</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Personal Hygiene</a>
-						  </li>
-			
-						</ul>
+						<a href="{%url 'category' p_category='Personal Hygiene'%}" class="menu-title">Personal
+							Hygiene</a>
+
+
 					</li>
 					<li class="menu-category">
-						<a href="#" class="menu-title">Medical Equipments</a>
-			
-						<ul class="dropdown-list">
-			
-						  <li class="dropdown-item">
-							<a href="#">Medical Equipments</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Medical Equipments</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Medical Equipments</a>
-						  </li>
-			
-						  <li class="dropdown-item">
-							<a href="#">Medical Equipments</a>
-						  </li>
-			
-						</ul>
+						<a href="{%url 'category' p_category='Medical Equipments' %}" class="menu-title">Medical
+							Equipments</a>
+
 					</li>
 				</ul>
 			</div>
