--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -342,18 +342,18 @@
 		</form>
 
 		
-        <div class="prescriptions container" id="prescriptions">
-			{% for item in medList %}
-        {% for p in item.prescriptions %}
-            <div class="presc-box">
+		<div class="prescriptions container" id="prescriptions">
+			{% for item in p_order %}
+				
+					<div class="presc-box">
+						<img src="../../media/{{ item.prescription_img }}" alt="{{ item.prescription_img }}">
+						<h3>Uploaded: 23.07.23</h3>
+					</div>
+					<div class="popup-image"><img src="../../media/{{ item.prescription_img }}" alt="{{ item.prescription_img }}"></div>
+				{% endfor %}
 
-                <img src="../../media/{{p.0}}" alt="{{p.0}}" >
-                <h3>Uploaded: 23.07.23</h3>
-            </div>
-            <div class="popup-image"><img src="../../media/{{p.0}}" alt=""></div>
-			{%endfor%}
-			{%endfor%}
-        </div>
+		</div>
+		
 	
 
 		<div class="purchase-history container">
