--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -347,7 +347,7 @@
 				
 					<div class="presc-box">
 						<img src="../../media/{{ item.prescription_img }}" alt="{{ item.prescription_img }}">
-						<h3>Uploaded: 23.07.23</h3>
+						<h3>{{item.Delivery_status}}</h3>
 					</div>
 					<div class="popup-image"><img src="../../media/{{ item.prescription_img }}" alt="{{ item.prescription_img }}"></div>
 				{% endfor %}
