--- a/templates/search-results.html
+++ b/templates/search-results.html
@@ -399,6 +399,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static 'script.js' %}"></script>
 <script src="{% static 'search.js' %}"></script>
-<script type="text/javascript" src="{% static 'cart.js' %}"></script>
+<script src="{% static 'cart.js' %}"></script>
+<script type="text/javascript" src="{% static 'prescription.js' %}"></script>
 </body>
 </html>
