--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -290,7 +290,6 @@
 		<!-- <h1>{{ user }}</h1> -->
 		<!-- <div class="container"> -->
 		<form action="{% url 'update_profile' %}" method="post" class="registration-form container row active">
-			<h1>Account</h1>
 			{% csrf_token %}
 			<div class="input-box col-sm-6">
 				<label for="">First Name</label>
@@ -440,7 +439,7 @@
 		<div class="footer-top section">
 			<div class="container">
 				<div class="footer-brand">
-					<a href="#" class="logo"><img style="border-radius: 10px;" src="assets/logo.jpg" width="80" alt="logo"></a>
+					<a href="#" class="logo"><img style="border-radius: 10px;" src="{% static 'Favicon.png' %}" width="80" alt="logo"></a>
 					<p class="footer-text">
 						If you have any queries please contact us at <a href="mailto:support@gmail.com" class="link">support@gmail.com</a>
 					</p>
