--- a/static/order_confirm.css
+++ b/static/order_confirm.css
@@ -19,7 +19,7 @@
 	--black: #000000;
 }
 /*** RESETTING CSS ***/
-*, *::before, *::after {
+* {
 	font-family: 'poppins', sans-serif;
 	margin: 0;
 	padding: 0;
@@ -491,7 +491,7 @@ body::-webkit-scrollbar-thumb:hover {
 
 main .container {
     display: flex;
-    margin: 20px 60px 20px 60px;
+    /* margin: 20px 60px 20px 60px; */
     flex-direction: column;
 }
 
@@ -569,15 +569,122 @@ main .container {
 	text-align: center;
 }
 
+
+
+form {
+	display: flex;
+	justify-content: space-around;
+}
+form .details {
+	margin: 30px 0;
+}
+form .details label i {
+	margin-right: 10px;
+	font-size: 20px;
+}
+
+form .details label:nth-of-type(1) {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--red);
+	padding: 60px 30px;
+	margin-bottom: 10px;
+	color: white;
+	font-size: 1.2rem;
+	font-weight: 600;
+	border-radius: 10px;
+	border: 2px solid var(--red);
+	cursor: pointer;
+	transition: 0.2s ease-in;
+}
+form .details label:nth-of-type(1):hover {
+	background-color: transparent;
+	color: var(--red);
+}
+
+form .details input[type="file"]{
+	display: none;
+}
+form .details label:nth-of-type(2) {
+	font: 600 1.2rem 'poppins', sans-serif;
+}
+.details textarea{
+	resize: none;
+	font-weight: 400;
+	font-size: 1rem;
+	padding: 15px 0 0 15px;
+	outline: none;
+	border: none;
+	border-radius: 10px;
+	background-color: rgb(232, 240 ,254);
+}
+
+form .payment {
+	margin: 30px 0;
+}
+
+form .payment p{
+	line-height: 2rem;
+}
+
+form .payment select {
+	width: 100%;
+	padding: 15px;
+	font-size: 1.2rem;
+	color: white;
+	font-weight: 600;
+	outline: none;
+	border: 2px solid var(--red);
+	border-radius: 10px;
+	box-shadow: 0 8px 16px hsla(0, 0%, 0%, 0.15);
+	appearance: none;
+	background: var(--red) url(caret-down-solid.svg) no-repeat;
+	background-position: 95% 50%;
+	background-size: 20px;
+}
+.bkash-info-taker {
+	visibility: none;
+	opacity: 0;
+	margin-top: 16px;
+	transition: 0.2s ease;
+}
+.bkash-info-taker.active {
+	visibility: visible;
+	opacity: 1;
+}
+.bkash-info-taker h5{
+	margin-bottom: 20px;
+}
+.bkash-info-taker label {
+	margin-top: 22px;
+	font: 600 1.2rem 'poppins',sans-serif;
+}
+.bkash-info-taker input {
+	font: 400 1rem 'poppins',sans-serif;
+	padding: 8px 0px 8px 8px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	background-color: rgb(232, 240 ,254);
+}
+
+
 .confirm-order {
+	font-size: 1.2rem;
     cursor: pointer;
     font-weight: 600;
     color: white;
-    margin-top: 10px;
+    margin-top: 20px;
     background-color: var(--red);
     border-radius: 10px;
     width: 100%;
     padding: 10px 20px;
+	transition: 0.2s ease;
+}
+
+.confirm-order:hover {
+	letter-spacing: 1px;
 }
 
 
