--- a/templates/order_confirm.html
+++ b/templates/order_confirm.html
@@ -72,7 +72,7 @@
                         {% endif %}
                         
                         <label for="address">Address:</label>
-                        <textarea rows="6" cols="75" type="text" id="addressInput" name="address" value='{{user_address}}' size="10">
+                        <textarea rows="6" cols="75" type="text" id="addressInput" name="address" value='{{user_address}}'></textarea>
                     </div>
                     <div class="payment col-sm-6">
                     
