Bkash payment added

--- a/templates/order_confirm.html
+++ b/templates/order_confirm.html
@@ -98,10 +98,10 @@
                         <div class="bkash-info-taker">
                             <h5>Account type: <b>Personal</b></h5>
                             <h5>Account Number: <b>01XXXXXXXXX</b></h5>
-                            <label for="">Your bKash Account Number</label>
-                            <input type="phone" placeholder="01XXXXXXXXX">
-                            <label for="">Transaction ID</label>
-                            <input type="text" placeholder="AKS4BPLFKY">
+                            <label for="paymentMobile">Your bKash Account Number</label>
+                            <input type="phone" name="paymentMobile" placeholder="01XXXXXXXXX">
+                            <label for="TxID">Transaction ID</label>
+                            <input type="text" name="TxID" placeholder="Check your Bkash Confirmation Message for TxID">
                         </div>
                     </div>
 
