Cart Length on Badge

--- a/templates/search-results.html
+++ b/templates/search-results.html
@@ -62,7 +62,7 @@
 					</button>
 					<button id="cart-btn" class="action-btn">
 						<ion-icon name="bag-outline"></ion-icon>
-						<span class="btn-badge">3</span>
+						<span class="btn-badge"></span>
 					</button>
 					
 					<div class="shopping-cart" >
