--- a/templates/category-wise.html
+++ b/templates/category-wise.html
@@ -59,7 +59,7 @@
 
 					<button id="cart-btn" class="action-btn" >
 						<ion-icon name="bag-outline"></ion-icon>
-						<span class="btn-badge">3</span>
+						<span class="btn-badge"></span>
 					</button>
 						<div class="shopping-cart" >
 								<!-- HTML template for a product cartbox -->
