--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -64,7 +64,7 @@
 					</button>
 					<button id="cart-btn" class="action-btn">
 						<ion-icon name="bag-outline"></ion-icon>
-						<span class="btn-badge">3</span>
+						<span class="btn-badge"></span>
 					</button>
 					<div class="shopping-cart">
 						<!-- HTML template for a product cartbox -->
