--- a/templates/pres_confirm.html
+++ b/templates/pres_confirm.html
@@ -4,6 +4,9 @@
   <head>
     <title>medE</title>
 	  <link rel="icon" type="image/x-icon" href="{% static 'Favicon.png' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <style>
       .header-main .container {
         border-bottom: 1px solid hsl(0, 0%, 93%);
@@ -22,24 +25,16 @@
       }
       .purchase-history {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        margin-top: 30px;
+        /* flex-direction: column; */
+        /* align-items: center; */
+        justify-content: space-evenly;
       }
       .presc-image {
-        height: 600px;
-        width: 550px;
+        height: 100%;
+        width: 600px;
       }
-      form {
-        display: flex;
-        flex-direction: column;
-        width: 90%;
-      }
-      label {
-        padding: 5px 10px;
-        font: 600 20px "poppins", sans-serif;
-      }
-      #addressInput {
+      /* #addressInput {
         outline: none;
         border: none;
         border-radius: 15px;
@@ -47,6 +42,78 @@
         padding: 0px 10px;
         background-color: rgb(232, 240, 254);
         width: calc(100% - 20px);
+      } */
+      form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+      }
+
+      form .details label {
+        font: 600 1.2rem 'poppins', sans-serif;
+      }
+      form .details textarea{
+        resize: none;
+        font-weight: 400;
+        font-size: 1rem;
+        padding: 15px 0 0 15px;
+        outline: none;
+        border: none;
+        border-radius: 10px;
+        background-color: rgb(232, 240 ,254);
+        box-shadow: inset 2px 2px 5px 4px hsla(0, 0%, 0%, 0.01);
+      }
+
+      form .payment {
+        margin: 30px 0;
+      }
+
+      form .payment p{
+        line-height: 2rem;
+      }
+
+      form .payment select {
+        width: 100%;
+        margin-top: 10px;
+        padding: 15px;
+        font-size: 1.2rem;
+        color: white;
+        font-weight: 600;
+        outline: none;
+        border: 2px solid #de0000;
+        border-radius: 10px;
+        box-shadow: 0 8px 16px hsla(0, 0%, 0%, 0.15);
+        appearance: none;
+        background: #de0000 url(caret-down-solid.svg) no-repeat;
+        background-position: 95% 40%;
+        background-size: 20px;
+        cursor: pointer;
+      }
+      .bkash-info-taker {
+        visibility: none;
+        opacity: 0;
+        margin-top: 16px;
+        transition: 0.2s ease;
+      }
+      .bkash-info-taker.active {
+        visibility: visible;
+        opacity: 1;
+      }
+      .bkash-info-taker h5{
+        margin-bottom: 20px;
+      }
+      .bkash-info-taker label {
+        margin: 10px 0;
+        font: 600 1.2rem 'poppins',sans-serif;
+      }
+      .bkash-info-taker input {
+        width: 100%;
+        font: 400 1rem 'poppins',sans-serif;
+        padding: 8px 0px 8px 8px;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        background-color: rgb(232, 240 ,254);
       }
       .confirm-order {
         border: none;
@@ -56,7 +123,7 @@
         color: white;
         margin-top: 10px;
         background-color: #de0000;
-        border-radius: 15px;
+        border-radius: 10px;
         width: 100%;
         padding: 10px 20px;
         transition: 0.2s ease;
@@ -85,18 +152,50 @@
     </header>
     <main>
         <div class="container">
-            <div class="purchase-history">
+            <div class="purchase-history row">
                 {% for item in medList %}
                     {% for p in item.prescriptions %}
 
                         {% if forloop.last %}
-                        <img class="presc-image" src="../../media/{{p.0}}" alt="{{p.0}}" >
-                            <form method="post" action="{% url 'presciptions_order' %}">
-                                {% csrf_token %}
-                                <input type="hidden" name="prescription_img" value="{{ p.0 }}">
-                                <input type="hidden" name="days2" value="{{p.1}}">
-                                <label for="address">Address:</label>
-                                <input style="height: 60px;" type="text" id="addressInput" name="address" value='{{user_address}}' required />
+                        <img class="presc-image col-sm-6" src="../../media/{{p.0}}" alt="{{p.0}}" >
+                            <form class="row col-sm-6" method="post" action="{% url 'presciptions_order' %}">
+                              <div class="details col-sm-12">
+                                  {% csrf_token %}
+                                  <input type="hidden" name="prescription_img" value="{{ p.0 }}">
+                                  <input type="hidden" name="days2" value="{{p.1}}">
+                                  <label for="address">Address:</label>
+                                  <textarea rows="6" cols="75" type="text" id="addressInput" name="address" value='{{user_address}}' required></textarea>
+                                </div>
+                                <div class="payment col-sm-12">
+                    
+                                  <!-- <p>
+                                      01. Open the bKash app or go to your bKash Mobile Menu by dialling *247#<br>
+                                      02. Choose “Send Money”<br>
+                                      03. Enter the bKash Account Number given down below “Account Number.”<br>
+                                      04. Enter the exact bill amount.<br>
+                                      05. Now, enter your bKash Mobile Menu PIN to confirm the transaction.<br>
+                                      06. After sending money, you'’'ll receive a bKash Transaction ID (TRX ID). Note the Transaction ID.<br>
+                                      09. Now, enter your bKash number and Transaction ID (TRX ID) on the form down below. (Note: If you are paying from an Agent, don’t forget to get his bKash number and Transaction ID (TRX ID). If he doesn’t want to provide the Transaction ID (TRX ID), you can type ‘AGENT’ on the Transaction ID form.)<br>
+                                      ** Our bKash number changes from time to time. Don’t call this number. You won’t get any reply. If you need to talk, kindly knock us on Facebook or join the discord. If possible, don’t forget to take a payment screenshot from the bKash app; it may require for any future inquiries **<br>
+                                      <b>You need to send us ৳ 255.00</b>
+                                  </p> -->
+                                  <select name="payment-options" id="payment-options">
+                                      <option id="codOpt" value="cod">COD (Cash on Delivery)</option>
+                                      <option id="bkashOpt" value="bKash">bKash</option>
+                                  </select>
+                                  
+                                  
+          
+          
+                                  <div class="bkash-info-taker">
+                                    <h5>Account type: <b>Personal</b></h5>
+                                    <h5>Account Number: <b>01XXXXXXXXX</b></h5>
+                                    <label for="paymentMobile">Your bKash Account Number</label>
+                                    <input type="phone" name="paymentMobile" placeholder="01XXXXXXXXX">
+                                    <label for="TxID">Transaction ID</label>
+                                    <input type="text" name="TxID" placeholder="Check your Bkash Confirmation Message for TxID">
+                                  </div>
+                                </div>
                                 <button class="confirm-order" type="submit">Confirm Order</button>
                                 
                             </form>
@@ -115,20 +214,18 @@
     </main>
 
       
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
+    <script>
+        const bkashopt = document.getElementById(bkashOpt);
+        const codopt = document.getElementById(codOpt);
+        document.getElementById("payment-options").addEventListener('change', function (event){
+            if (event.target.value == 'bKash') {
+                document.querySelector('.bkash-info-taker').classList.add('active');
+            }
+            else if (event.target.value == 'cod') {
+                document.querySelector('.bkash-info-taker').classList.remove('active');
+            }
+        });
+    </script>
     <script type="text/javascript" src="{% static 'script.js' %}"></script>
   </body>
 </html>
